Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Multi-label-image-classification by suraj-deshmukh</title>
+    <title>Multi label image classification by suraj-deshmukh</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
@@ -16,7 +16,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1 class="header">Multi-label-image-classification</h1>
+        <h1 class="header">Multi label image classification</h1>
         <p class="header">The objective of this study is to develop a deep learning model that will identify the natural scenes from images.</p>
 
         <ul>
