--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <li><a class="buttons github" href="https://github.com/suraj-deshmukh/Multi-Label-Image-Classification">View On GitHub</a></li>
         </ul>
 
-        <p class="header">This project is maintained by <a class="header name" href="https://github.com/suraj-deshmukh">suraj-deshmukh</a></p>
+        <p class="header">This project is maintained by <a class="header name" href="https://github.com/suraj-deshmukh">suraj-deshmukh</a> <a class="header name" href="https://github.com/bhaveshoswal">bhavesh-oswal</a> </p>
 
 
       </header>
