--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <h1>
 <a id="keras-model-architecture" class="anchor" href="#keras-model-architecture" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Keras Model Architecture</h1>
 
-<p><img src="https://github.com/suraj-deshmukh/Multi-Label-Image-Classification/blob/master/model.png" alt="all tag"></p>
+<p><img src="https://github.com/suraj-deshmukh/Multi-Label-Image-Classification/blob/master/model.png"></p>
 
 <h1>
 <a id="preprocessing" class="anchor" href="#preprocessing" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Preprocessing</h1>
