--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
           <li><a class="buttons github" href="https://github.com/suraj-deshmukh/Multi-Label-Image-Classification">View On GitHub</a></li>
         </ul>
 
-        <p class="header">This project is maintained by <a class="header name" href="https://github.com/suraj-deshmukh">suraj-deshmukh</a></p>
+        <p class="header">This project is maintained by <a class="header name" href="https://github.com/suraj-deshmukh">suraj-deshmukh</a>
+	      <a class="header name" href="https://github.com/suraj-deshmukh">suraj-deshmukh</a> </p>
 
 
       </header>
@@ -43,7 +44,7 @@
 <h1>
 <a id="keras-model-architecture" class="anchor" href="#keras-model-architecture" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Keras Model Architecture</h1>
 
-<p><img src="https://github.com/suraj-deshmukh/Multi-Label-Image-Classification/blob/master/model.png"></p>
+<p><img src="https://github.com/suraj-deshmukh/Multi-Label-Image-Classification/blob/master/model.png?raw=true"></p>
 
 <h1>
 <a id="preprocessing" class="anchor" href="#preprocessing" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Preprocessing</h1>
