--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@
 
 <p>Jupyter/iPython Notebook has been provided to know about the model and its working. <a href="https://github.com/suraj-deshmukh/Multi-Label-Image-Classification/blob/master/miml.ipynb">https://github.com/suraj-deshmukh/Multi-Label-Image-Classification/blob/master/miml.ipynb</a> </p>
       </section>
-      <!-- <footer>
+      <footer>
         <p><small>Hosted on <a href="https://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
-      </footer>  -->
+      </footer>
     </div>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
 		
