--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </ul>
 
         <p class="header">This project is maintained by <a class="header name" href="https://github.com/suraj-deshmukh">suraj-deshmukh</a>
-	      <a class="header name" href="https://github.com/suraj-deshmukh">suraj-deshmukh</a> </p>
+	      <a class="header name" href="https://github.com/bhaveshoswal">bhavesh-oswal</a> </p>
 
 
       </header>
