--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="wrapper">
       <header>
         <h1 class="header">Multi label image classification</h1>
-        <p class="header">The objective of this study is to develop a deep learning model that will identify the natural scenes from images.</p>
+        <p class="header">Deep Learning Model for Natural Scenes Detection.</p>
 
         <ul>
           <li class="download"><a class="buttons" href="https://github.com/suraj-deshmukh/Multi-Label-Image-Classification/zipball/master">Download ZIP</a></li>
